force-app/main/default/objects/Monitoramento__c/fields/Hist_rico_analisado__c.field-meta.xml
<CustomField>
    <fullName>Hist_rico_analisado__c</fullName>
    <description>Atendente demonstrou ter consultado e analisado o histórico de atendimento?</description>
    <inlineHelpText>Atendente demonstrou ter consultado e analisado o histórico de atendimento?</inlineHelpText>
    <label>Histórico analisado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>