force-app/main/default/objects/Monitoramento__c/fields/Informa_es_corretas__c.field-meta.xml
<CustomField>
    <fullName>Informa_es_corretas__c</fullName>
    <description>Todo o conteúdo relacionado aos produtos e serviços da Previ está correto?</description>
    <inlineHelpText>Todo o conteúdo relacionado aos produtos e serviços da Previ está correto?</inlineHelpText>
    <label>Informações corretas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>