force-app/main/default/objects/Monitoramento__c/fields/Reposicionamento__c.field-meta.xml
<CustomField>
    <fullName>Reposicionamento__c</fullName>
    <description>Há a necessidade de reposicionamento?</description>
    <inlineHelpText>Há a necessidade de reposicionamento?</inlineHelpText>
    <label>Reposicionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>