force-app/main/default/objects/Monitoramento__c/fields/Resposta_coesa__c.field-meta.xml
<CustomField>
    <fullName>Resposta_coesa__c</fullName>
    <description>A resposta foi construída com coesão de forma a permitir a completa compreensão do participante?</description>
    <inlineHelpText>A resposta foi construída com coesão de forma a permitir a completa compreensão do participante?</inlineHelpText>
    <label>Resposta coesa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>