force-app/main/default/objects/Monitoramento__c/fields/Resposta_completa__c.field-meta.xml
<CustomField>
    <fullName>Resposta_completa__c</fullName>
    <description>Todas as informações relevantes foram incluídas na resposta?</description>
    <inlineHelpText>Todas as informações relevantes foram incluídas na resposta?</inlineHelpText>
    <label>Resposta completa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>