force-app/main/default/objects/Monitoramento__c/fields/Resposta_objetiva__c.field-meta.xml
<CustomField>
    <fullName>Resposta_objetiva__c</fullName>
    <description>A pergunta do participante foi respondida diretamente?</description>
    <inlineHelpText>A pergunta do participante foi respondida diretamente?</inlineHelpText>
    <label>Resposta objetiva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>