force-app/main/default/objects/Monitoramento__c/fields/Resposta_precisa__c.field-meta.xml
<CustomField>
    <fullName>Resposta_precisa__c</fullName>
    <description>A resposta continha apenas informações necessárias?</description>
    <inlineHelpText>A resposta continha apenas informações necessárias?</inlineHelpText>
    <label>Resposta precisa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>