force-app/main/default/objects/Monitoramento__c/fields/Resultado_do_monitoramento__c.field-meta.xml
<CustomField>
    <fullName>Resultado_do_monitoramento__c</fullName>
    <description>Será atribuída uma nota ao final do preenchimento do monitoramento</description>
    <formula>IF(ISPICKVAL(Informa_es_corretas__c, &apos;Não&apos;) || ISPICKVAL(Reposicionamento__c, &apos;Sim&apos;) , 0,
        IF(ISPICKVAL(Hist_rico_analisado__c, &apos;Sim&apos;), 0.2, 0) +
        IF(ISPICKVAL(Resposta_objetiva__c, &apos;Sim&apos;), 0.2, 0) +
        IF(ISPICKVAL(Resposta_completa__c, &apos;Sim&apos;), 0.2, 0) +
        IF(ISPICKVAL(Resposta_precisa__c, &apos;Sim&apos;), 0.1, 0) +
        IF(ISPICKVAL(Resposta_coesa__c, &apos;Sim&apos;), 0.1, 0)+ 0.2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Será atribuída uma nota ao final do preenchimento do monitoramento</inlineHelpText>
    <label>Resultado do monitoramento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>